--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Demo SauceLabs</th></tr>
-<tr><td><a href="#t0">Demo Tests for SauceLabs</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">6,505</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Demo Tests for SauceLabs</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,499</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Demo SauceLabs</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Demo Tests for SauceLabs &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">demo.sauceLabs.pom.tests.HomePageTests</td><td><a href="#m0">addToCart</a></td><td rowspan="1">1725877982025</td><td rowspan="1">4247</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Demo SauceLabs</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Demo Tests for SauceLabs &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">demo.sauceLabs.pom.tests.OrderPlaceTests</td><td><a href="#m0">addToCart</a></td><td rowspan="1">1725972278537</td><td rowspan="1">9174</td></tr></tbody>
 </table>
-<h2>Demo Tests for SauceLabs</h2><h3 id="m0">demo.sauceLabs.pom.tests.HomePageTests#addToCart</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Unable to navigate to Address Page expected [true] but found [false]
-	at demo.sauceLabs.pom.base.BaseTest.validateStatusReportLog(BaseTest.java:97)
-	at demo.sauceLabs.pom.tests.HomePageTests.addToCart(HomePageTests.java:62)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Demo Tests for SauceLabs</h2><h3 id="m0">demo.sauceLabs.pom.tests.OrderPlaceTests#addToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
