--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Demo_SauceLabs" class="navigator-link">
-              <span class="suite-name border-failed">Demo SauceLabs</span>
+              <span class="suite-name border-passed">Demo SauceLabs</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Demo_SauceLabs" class="navigator-link ">
-                    <span>C:\Users\Sanjeev\Selenium Projects\Saucedemo\SauceLabs\testng.xml</span>
+                    <span>C:\Users\Sanjeev\Selenium Projects\Pull 1\SauceLabsDemo\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,21 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Demo_SauceLabs" class="hide-methods failed suite-Demo_SauceLabs"> (hide)</a> <!-- hide-methods failed suite-Demo_SauceLabs -->
-                      <a href="#" panel-name="suite-Demo_SauceLabs" class="show-methods failed suite-Demo_SauceLabs"> (show)</a> <!-- show-methods failed suite-Demo_SauceLabs -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Demo_SauceLabs" class="hide-methods passed suite-Demo_SauceLabs"> (hide)</a> <!-- hide-methods passed suite-Demo_SauceLabs -->
+                      <a href="#" panel-name="suite-Demo_SauceLabs" class="show-methods passed suite-Demo_SauceLabs"> (show)</a> <!-- show-methods passed suite-Demo_SauceLabs -->
                     </span>
-                    <div class="method-list-content failed suite-Demo_SauceLabs">
+                    <div class="method-list-content passed suite-Demo_SauceLabs">
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Demo_SauceLabs" title="demo.sauceLabs.pom.tests.HomePageTests" class="method navigator-link" hash-for-method="addToCart">addToCart</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Demo_SauceLabs" title="demo.sauceLabs.pom.tests.OrderPlaceTests" class="method navigator-link" hash-for-method="addToCart">addToCart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Demo_SauceLabs -->
+                    </div> <!-- method-list-content passed suite-Demo_SauceLabs -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,10 +118,10 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Demo_SauceLabs" class="panel Demo_SauceLabs">
-          <div class="suite-Demo_SauceLabs-class-failed">
+          <div class="suite-Demo_SauceLabs-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">demo.sauceLabs.pom.tests.HomePageTests</span>
+              <img src="passed.png"/>
+              <span class="class-name">demo.sauceLabs.pom.tests.OrderPlaceTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -129,22 +129,16 @@
                   <a name="addToCart">
                   </a> <!-- addToCart -->
                   <span class="method-name">addToCart</span>
-                  <div class="stack-trace">java.lang.AssertionError: Unable to navigate to Address Page expected [true] but found [false]
-	at demo.sauceLabs.pom.base.BaseTest.validateStatusReportLog(BaseTest.java:97)
-	at demo.sauceLabs.pom.tests.HomePageTests.addToCart(HomePageTests.java:62)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 28 stack frames
-</div> <!-- stack-trace -->
                   <em>
 (Verify that user can Add Items to Cart, Enter Address Details and Place Order)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Demo_SauceLabs-class-failed -->
+          </div> <!-- suite-Demo_SauceLabs-class-passed -->
         </div> <!-- panel Demo_SauceLabs -->
         <div panel-name="test-xml-Demo_SauceLabs" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Sanjeev\Selenium Projects\Saucedemo\SauceLabs\testng.xml</span>
+            <span class="header-content">C:\Users\Sanjeev\Selenium Projects\Pull 1\SauceLabsDemo\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +151,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Demo Tests for SauceLabs&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;CHROME&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;demo.sauceLabs.pom.tests.HomePageTests&quot;/&gt;
+      &lt;class name=&quot;demo.sauceLabs.pom.tests.OrderPlaceTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Demo Tests for SauceLabs --&gt;
 &lt;/suite&gt; &lt;!-- Demo SauceLabs --&gt;
@@ -200,13 +194,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addToCart')
-data.setCell(0, 2, 'demo.sauceLabs.pom.tests.HomePageTests')
-data.setCell(0, 3, 4247);
+data.setCell(0, 2, 'demo.sauceLabs.pom.tests.OrderPlaceTests')
+data.setCell(0, 3, 9174);
 window.suiteTableData['Demo_SauceLabs']= { tableData: data, tableDiv: 'times-div-Demo_SauceLabs'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Demo_SauceLabs">
               </div> <!-- times-div-Demo_SauceLabs -->
             </div> <!-- times-div -->
@@ -232,28 +226,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">demo.sauceLabs.pom.tests.HomePageTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">demo.sauceLabs.pom.tests.OrderPlaceTests</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">startDriverInit(CHROME)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">startDriver(CHROME)</span>
-                <span class="method-start">31 ms</span>
+                <span class="method-start">34 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">addToCart</span>
-                <span class="method-start">2088 ms</span>
+                <span class="method-start">2164 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown(null)</span>
-                <span class="method-start">6338 ms</span>
+                <span class="method-start">11341 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite(null)</span>
-                <span class="method-start">6520 ms</span>
+                <span class="method-start">11502 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
