--- a/test-output/old/Demo SauceLabs/classes.html
+++ b/test-output/old/Demo SauceLabs/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>demo.sauceLabs.pom.tests.HomePageTests</td>
+<td>demo.sauceLabs.pom.tests.OrderPlaceTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
